# ai-ml-emulation-layer-for-vulkan

./: .clang-format  .cmakelintrc  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.txt
.reuse/: dep5
cmake/: FindSphinx.cmake  doxygen.cmake  glslang.cmake  gtest.cmake  package.cmake  prePackBuild.cmake  prePackInstall.cmake  sphinx.cmake  spirv-cross.cmake  spirv-headers.cmake  spirv-tools.cmake  version.cmake  vulkan-headers.cmake
cmake/toolchain/: gnu_compiler_options.cmake  linux-clang.cmake  linux-gcc.cmake  windows-msvc.cmake
common/: CMakeLists.txt  log.cpp  utils.cpp
common/include/mlel/: float.hpp  log.hpp  utils.hpp  vulkan_allocator.hpp  vulkan_layer.hpp
docs/: Doxyfile  docs.cmake
docs/source/: building.rst  cloning.rst  conf.py  contributing.rst  index.rst  license.rst  puml.rst  security.rst  usage.rst
docs/source/puml/: graph_object_diagram.puml
graph/: CMakeLists.txt  compute.cpp  compute.hpp  graph_layer.cpp  graph_log.cpp  graph_log.hpp  memory_planner.cpp  memory_planner.hpp  pipeline_cache.cpp  pipeline_cache.hpp  spirv_pass.cpp  spirv_pass.hpp  spirv_pass_tosaspv_v100.cpp  spirv_pass_tosaspv_v100.hpp  tensor.cpp  tensor.hpp
graph/layer.d/: VkLayer_Graph.json.in
graph/tosa/: CMakeLists.txt  elementwise_unary.comp  generate_glsl_header.cmake  generate_spv.cmake  generate_spv_header.cmake  reduce.comp  rfft2d.comp
tensor/: CMakeLists.txt  descriptor_binding.hpp  spirv_glsl_tensor_buffer.cpp  spirv_glsl_tensor_buffer.hpp  tensor_arm.cpp  tensor_descriptor.cpp  tensor_descriptor.hpp  tensor_ext.cpp  tensor_ext.hpp  tensor_layer.cpp  tensor_log.cpp  tensor_log.hpp  tensor_processor.cpp  tensor_processor.hpp  tensor_view.cpp  tensor_view.hpp
tensor/layer.d/: VkLayer_Tensor.json.in
tensor/shaders/: copy.comp  tensor.glsl
tests/: CMakeLists.txt  vulkan.cpp
tests/shader/: concat.spvasm  conv2d.spvasm  fft2d.spvasm  maximum.spvasm  maxpool.spvasm  nop-outputs.spvasm  slice.spvasm  twolayer-maxpool.spvasm
utilities/: CMakeLists.txt  device.cpp  pipeline.cpp  tensor.cpp
utilities/include/mlel/: device.hpp  exception.hpp  pipeline.hpp  tensor.hpp
